# toybrick_ssd_multithread

./: CMakeLists.txt  README.md  ssd_demo.cpp
common/: rknn.cpp  rknn.h  rknn_test.cpp  rknn_test.h  rknn_thread.cpp  rknn_thread.h
